Archive2/82/c5fe1d0a0267c7/output
main.cpp: In function 'int main()':
main.cpp:17:5: error: assignment of read-only reference 'j'
   j = 2;
     ^
